--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,6 @@
             --background:#023A66;
             --accent-color: #00B7F9;
             --secodary-color: #172A45;
-            --font-face:
         }
     </style>
 </head>
@@ -141,6 +140,19 @@
             <span class="text-[var(--accent-color)] mr-3 text-2xl">03.</span>
             <h2 class="text-2xl font-semibold">Education</h2>
             <hr class="w-[400px] opacity-20 ml-5">
+        </div>
+    </section>
+
+    <section id="contact" class="h-screen ml-40 pt-20 mt-20">
+        <div class="items-center flex">
+            <span class="text-[var(--accent-color)] mr-3 text-2xl">04.</span>
+            <h2 class="text-2xl font-semibold">What next?</h2>
+            <hr class="w-[400px] opacity-20 ml-5">
+        </div>
+        <div class="flex flex-col items-center pt-10">
+            <h3 class="text-4xl font-bold pb-20">Get In Touch</h3>
+            <p class="w-1/2 text-wrap text-center">As i'm currently a student i may not know many things but being a great explorer i can and am learning at a fast pace so feel free to contact me if you have any question</p>
+            <a href="mailto:rujenmrj15@gmail.com" class="px-10 py-5 hover:bg-[var(--accent-color)]/20 border border-[var(--accent-color)] mt-10 rounded-lg">Aloha</a>
         </div>
     </section>
 </body>
